<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_sign_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="com.sharekeg.streetpal.SignUp.SignUpActivity">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_alignBottom="@+id/tvback"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:gravity="center"
            android:text="Sign Up"
            android:textColor="#000" />
        <TextView
            android:id="@+id/tvback"
            android:layout_width="52dp"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/bg" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/IV_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/ic_change_profile_img"
            android:gravity="center_horizontal"
            android:textSize="13dp"

            />

        <TextView
            android:id="@+id/TV_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/IV_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="105dp"
            android:layout_marginTop="8dp"
            android:text="Upload Profile Picture"
            android:textColor="#000"
            android:textSize="12dp" />

        <LinearLayout
            android:id="@+id/Linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/TV_upload"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:orientation="vertical">
            <EditText

                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/signup_controls_bg"
                android:hint="@string/name"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/signup_controls_hint"
                android:textSize="12dp" />
            <EditText

                android:id="@+id/etuserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/signup_controls_bg"
                android:hint="Username"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/signup_controls_hint"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="E-mail Address"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/signup_controls_hint"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/etphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="Phone number"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/signup_controls_hint"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/TV_passward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/signup_controls_hint"
                android:textSize="12dp" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Linear"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/privateinfo"
            android:textAllCaps="true"
            android:textSize="10dp"
            android:textColor="#9f9999" />

        <RelativeLayout
            android:id="@+id/Relative"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_info"
            android:layout_marginTop="5dp"
            android:layout_centerInParent="true"
            android:background="@color/white"
           >

            <TextView
                android:id="@+id/TV_sex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/etage"
                android:background="@color/white"
                android:hint="Sex"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/signup_controls_hint"
                android:textSize="12dp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/etage"
                android:dropDownSelector="@drawable/img"
                android:padding="20dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/etWork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etage"
                android:background="@color/white"
                android:hint="Work"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/signup_controls_hint"
                android:textSize="12dp"

                />

            <EditText
                android:id="@+id/etnationalid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etWork"
                android:background="@color/white"
                android:hint="National ID"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/signup_controls_hint"
                android:textSize="12dp" />

            <Button
                android:id="@+id/btn_UploadNationalCard"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_below="@+id/etnationalid"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/nationalcardbtn"
                android:shadowColor="@color/black"
                android:text="@string/upload_national_card"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="10dp" />

            <EditText
                android:id="@+id/etage"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/white"
                android:hint="Age"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/signup_controls_hint"
                android:textSize="12dp" />


        </RelativeLayout>


        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_below="@+id/Relative"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="15dp"
            android:background="@color/signup_button_bg"
            android:gravity="center"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12dp" />


    </RelativeLayout>
</ScrollView>
